fixed margin issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 .body {
   font-family: "Open Sans", sans-serif;
   color: rgb(71 85 105);
+  width: 100%;
 }
 
 .button {
@@ -63,7 +64,7 @@
   padding: 0 !important;
   
   flex-direction: row;
-  width: 400px;
+  width: 300px;
 }
 
 #mc_embed_shell{
